[package]
name = "bevy_miniquinn"
version = "0.1.0"
edition = "2024"

[features]
default = ["rustls"]
rustls = ["quinn/rustls"]

[dependencies]
bevy_asynk_strim = { git = "https://github.com/vesdev/bevy_asynk_strim" }
bevy = { version = "0.17.2", default-features = false, features = ["bevy_log"] }
quinn = { version = "0.11.9", default-features = false, features = [
  "log",
  "ring",
  "runtime-smol",
] }

[dev-dependencies]
rcgen = "0.14.5"
